# alice-feedback

./: .gitignore  list_cameras.py  maestro.py  main.py  motor_ranges.yaml  pyproject.toml  setup_env.py  test_cameras.py
alice_feedback/: __init__.py  cli.py
alice_feedback/controllers/: __init__.py  maestro.py  motor_controller.py
alice_feedback/models/: __init__.py  neural_network.py  optimizer.py
alice_feedback/ui/: __init__.py  mimicry.py
alice_feedback/utils/: __init__.py  blendshapes.py  facial_landmarks.py  pid_controller.py
config/: motor_ranges.yaml
